Fixed some bugs on mobile

--- a/src/site/static/css/compiled/arbital.css
+++ b/src/site/static/css/compiled/arbital.css
@@ -446,42 +446,44 @@ arb-markdown > :last-child, [arb-markdown] > :last-child, .preview-area > :last-
   .preview-area .info-text {
     background-color: rgba(0, 0, 255, 0.15); }
 
-.capped-body-width, .capped-body-width #footer {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
-.capped-body-width #footer {
-  max-width: 1100px; }
-arb-index > .capped-body-width {
-  max-width: 1100px; }
-arb-group-index > .capped-body-width {
-  max-width: 1100px; }
-arb-user-page > .capped-body-width {
-  max-width: 1100px; }
-arb-dashboard-page > .capped-body-width {
-  max-width: 1100px; }
-arb-signup > .capped-body-width {
-  max-width: 560px; }
-arb-login > .capped-body-width {
-  max-width: 560px; }
-arb-updates > .capped-body-width {
-  max-width: 1100px; }
-arb-groups-page > .capped-body-width {
-  max-width: 900px; }
-arb-requisites-page > .capped-body-width {
-  max-width: 900px; }
-arb-learn-page > .capped-body-width {
-  max-width: 900px; }
-arb-settings-page > .capped-body-width {
-  max-width: 560px; }
-arb-primary-page > .capped-body-width {
-  max-width: 1100px; }
-arb-admin-dashboard-page > .capped-body-width {
-  max-width: 900px; }
-arb-read-mode-panel > .capped-body-width {
-  max-width: 900px; }
-arb-newsletter > .capped-body-width {
-  max-width: 900px; }
+.capped-body-width {
+  padding-bottom: 100px; }
+  .capped-body-width, .capped-body-width #footer {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
+  .capped-body-width #footer {
+    max-width: 1100px; }
+  arb-index > .capped-body-width {
+    max-width: 1100px; }
+  arb-group-index > .capped-body-width {
+    max-width: 1100px; }
+  arb-user-page > .capped-body-width {
+    max-width: 1100px; }
+  arb-dashboard-page > .capped-body-width {
+    max-width: 1100px; }
+  arb-signup > .capped-body-width {
+    max-width: 560px; }
+  arb-login > .capped-body-width {
+    max-width: 560px; }
+  arb-updates > .capped-body-width {
+    max-width: 1100px; }
+  arb-groups-page > .capped-body-width {
+    max-width: 900px; }
+  arb-requisites-page > .capped-body-width {
+    max-width: 900px; }
+  arb-learn-page > .capped-body-width {
+    max-width: 900px; }
+  arb-settings-page > .capped-body-width {
+    max-width: 560px; }
+  arb-primary-page > .capped-body-width {
+    max-width: 1100px; }
+  arb-admin-dashboard-page > .capped-body-width {
+    max-width: 900px; }
+  arb-read-mode-panel > .capped-body-width {
+    max-width: 900px; }
+  arb-newsletter > .capped-body-width {
+    max-width: 900px; }
 
 .discussion-container {
   margin: 20px 0; }
@@ -771,7 +773,7 @@ arb-user-popover {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 0;
+  width: 100vw;
   height: 0;
   overflow: visible;
   z-index: 1000; }
